--- a/四元数.md
+++ b/四元数.md
@@ -1,5 +1,9 @@
 # 四元数
 
+
+
+*Github不支持Latex公式*
+
 四元数包含一个实部和三个虚部
 $$
 q = s + xi + yj + zk
@@ -60,6 +64,3 @@ $$
 $$
 q^{-1}=\frac{q^{*}}{||q||}
 $$
-
-Github不支持Latex公式
-
