添加日志修改

--- a/调试日志.md
+++ b/调试日志.md
@@ -799,3 +799,250 @@ def listener():
 if __name__ == '__main__':
     listener()
 ```
+
+# 2021.09.17
+- 在myGPS.msg文件中添加 uint32 compass ，重新编译 
+
+- 编写串口获取脚本 myserial.py，
+
+话题名称：/myserial
+
+消息类型：/Float32
+
+```python
+#!/usr/bin/env python
+# -*- coding: UTF-8 -*-
+import rospy
+import time
+import serial #导入serial包
+# from std_msgs.msg import String
+from std_msgs.msg import Float32
+
+#pub = rospy.Publisher('myserial', String , queue_size=5)  #发布话题设为全局变量
+pub = rospy.Publisher('myserial', Float32 , queue_size=5)  #发布话题设为全局变量
+
+def node():
+    rospy.init_node("serial_test") #初始化ros节点
+    ser = serial.Serial("/dev/ttyUSB0", 9600, timeout=1) #打开串口, 端口号:"/dev/ttyUSB0". 波特率:9600. 延时等待1s
+    if ser.isOpen(): #判断串口是否打开
+        print("串口打开成功")
+    else:
+        print("串口打开失败")
+        quit()
+    while not rospy.is_shutdown():
+        ser.write('hello')#发送hello
+        time.sleep(1)#等待1s
+        cnt = ser.inWaiting() #等待接受数据
+        if cnt > 0 : #接受数据量大于0
+            rev = ser.read(cnt) #读数据
+            print(rev)
+            # print(type(rev))
+            Magx=rev.split(',')[0]
+            Magy=rev.split(',')[1]
+            Magz=rev.split(',')[2]
+            Yaw =rev.split(',')[3]
+            # print(str(rev)) #打印
+            # rev = rev.split(',')[3]
+            # rev = rev.split(':')[1]
+            Magx= Magx.split(':')[1]
+            Magy= Magy.split(':')[1]
+            Magz= Magz.split(':')[1]
+            Yaw = Yaw.split(':')[1]
+            # Yaw = Yaw.split('\\')[0]
+            print("Magx:",Magx, " Magy:", Magy, " Magz:", Magz, " Yaw: ", Yaw)
+            
+            Yaw = float(Yaw)
+            print(Yaw)
+            print(type((Yaw)))
+            #pub.publish(String(rev))
+            pub.publish(Yaw)
+if __name__ == '__main__':
+    try:
+        node()
+    except rospy.ROSInterruptException:
+        pass
+    # node()
+```
+
+在另外一个py文件中添加：
+
+- 导入消息类型：
+```python
+from std_msgs.msg import Float64
+```
+- 添加全局变量
+```python
+serialdata = 0
+```
+- listener()函数中添加
+
+```python
+rospy.Subscriber('/myserial', Float64, callback2)
+```
+- 添加回调函数callback2()
+```python
+def callback2(myserial):
+    global serialdata
+    serialdata=myserial.data
+    rospy.loginfo('------------------Listener: serial=%f ', serialdata)
+```
+- 每个pub.publish(msg)前面添加：
+
+```python
+global serialdata
+msg.compass=serialdata
+```
+
+查看USB设备的详细信息
+```shell
+$ lsusb
+Bus 002 Device 003: ID 0bc2:231a Seagate RSS LLC 
+Bus 002 Device 002: ID 0bda:0411 Realtek Semiconductor Corp. 
+Bus 002 Device 001: ID 1d6b:0003 Linux Foundation 3.0 root hub
+Bus 001 Device 012: ID 8087:0029 Intel Corp. 
+Bus 001 Device 015: ID 1a86:7523 QinHeng Electronics HL-340 USB-Serial adapter
+Bus 001 Device 003: ID 0bda:5411 Realtek Semiconductor Corp. 
+Bus 001 Device 006: ID 05e3:0608 Genesys Logic, Inc. Hub
+Bus 001 Device 009: ID 18f8:1286  
+Bus 001 Device 007: ID 413c:2113 Dell Computer Corp. 
+Bus 001 Device 004: ID 3188:6804  
+Bus 001 Device 002: ID 05e3:0608 Genesys Logic, Inc. Hub
+Bus 001 Device 001: ID 1d6b:0002 Linux Foundation 2.0 root hub
+```
+
+或者
+```shell
+udevadm info --attribute-walk --name=/dev/ttyUSB0
+```
+
+| Bus 001 | Device 015 | : | ID 1a86:7523 | QinHeng Electronics|HL-340 USB-Serial adapter |
+| ------- | ---------- | ---- | ------------ | ----------------------------|----------------- |
+| 第1个usb主控制器|系统分配的设备号|      |usb设备的ID，idVendor和idProduct，由芯片制造商设置，可以唯一表示该设备|idVendo|idProduct|
+
+udev规则文件
+
+udev的规则文件一般位于 /lib/udev/rules.d/，也可以位于 /etc/udev/rules.d/
+规则文件是按照字母顺序处理的，不管放在哪个目录。对于相同名字的规则文件， /etc/udev/rules.d 比 /lib/udev/rules.d 优先。
+规则文件必须以 .rules 作为扩展名，否则不被当作规则文件。
+规则文件的每一行都是 key=value 格式。 key 有两个类型：1）匹配型 key  2）赋值型 key
+当所有匹配型 key 都匹配时，该规则即被采用，赋值型 key 就会获得相应的值。
+当规则匹配时，可以重命名网络接口， 创建到设备节点的符号链或运行一个指定程序来处理该事件。
+一条规则由多个key=value 组成，以英文逗号隔开。 每个 key 有一个操作，取决于操作符，有效的操作符如下：
+
+```
+           ==      比较是否相等
+           !=       比较是否不相等
+           =        给一个key 赋值。 表示一个列表的key会被重置，并且把这个唯一的值传给它
+           +=     将一个值增加到key中
+           :=      将一个值传给一个key，并且不允许再修改这个key。
+```
+
+```shell
+KERNEL=="ttyACM*", ATTRS{idVendor}=="1546", ATTRS{idProduct}=="01a8", MODE:="0777", SYMLINK+="gps"
+```
+
+
+|关键词|含义|
+|---|------|
+|KERNEL|匹配事件的设备名|
+|ATTR { filename }|匹配事件设备的 sysfs 属性|
+|OWNER, GROUP, MODE|为设备设定权限|
+|SYMLINK|为 /dev/下的设备文件产生符号链接。由于 udev 只能为某个设备产生一个设备文件，所以为了不覆盖系统默认的 udev 规则所产生的文件，推荐使用符号链接。|
+
+为磁力计添加rule规则
+
+```shell
+$ sudo su
+$  vim /etc/udev/rules.d/compass.rules
+#加入以下内容
+KERNEL=="ttyUSB*", ATTRS{idVendor}=="1a86", ATTRS{idProduct}=="7523", MODE:="0777", SYMLINK+="compass" 
+#上述内容好像有问题，改为以下内容：
+KERNEL=="ttyUSB*", SUBSYSTEMS=="usb", ATTRS{idVendor}=="1a86", ATTRS{idProduct}=="7523", MODE:="0777", SYMLINK+="compass" 
+```
+
+重新加载udev
+
+```shell
+$ sudo service udev reload
+```
+
+重启udev
+
+```shell
+$ sudo service udev restart
+```
+
+# 2021.09.18
+
+ublox_gps包默认的GPS模块是m8u型号，在维特智能买的新GPS是m9u，需要在 ublox/ublox_gps/launch/ublox_gps.launch 中修改，
+
+# 2021.09.22
+
+## IMU测试
+
+- 安装相关插件
+```shell
+sudo apt-get install ros-melodic-imu-tools ros-melodic-rviz-imu-plugin
+```
+- 创建文件夹，下载源码
+```shell
+mkdir -p  ~/handsfree/handsfree_ros_ws/src/
+cd ~/handsfree/handsfree_ros_ws/src/
+git clone https://gitee.com/HANDS-FREE/handsfree_ros_imu.git
+cd ~/handsfree/handsfree_ros_ws/
+catkin_make
+cd ~/handsfree/handsfree_ros_ws/src/handsfree_ros_imu/scripts/
+sudo chmod 777 *.py
+echo "source ~/handsfree/handsfree_ros_ws/devel/setup.bash" >> ~/.bashrc
+source ~/.bashrc
+```
+- 给串口赋权限
+```shell
+ls /dev/ttyUSB0
+sudo chmod 777 /dev/ttyUSB0
+```
+
+- 功能包的使用
+
+&emsp;陀螺仪和加速计发布的话题：/handsfree/imu
+
+&emsp;磁力计发布的话题：/handsfree/mag
+
+&emsp;1、通过 USB 连接线将 IMU 和电脑连接。
+
+&emsp;2、运行 ROS 驱动可视化程序，打开 rviz 。
+```shell
+roslaunch handsfree_ros_imu rviz_and_imu.launch imu_type:=a9（改成你的imu的型号，可选项：a9，b9，b6）
+```
+&emsp;3、运行脚本获取 IMU 欧拉角格式数据：Roll（翻滚），Pitch（俯仰），Yaw（偏航）
+```shell
+rosrun handsfree_ros_imu get_imu_rpy.py
+```
+
+- launch文件描述
+
+```
+display_and_imu.launch
+
+  打开 3d 的图形化界面节点和 IMU节点
+
+handsfree_imu.launch
+
+  打开 IMU 节点，默认打开型号为 a9 的IMU模块。
+
+rviz_and_imu.launch
+
+  打开 rviz 可视化界面和 IMU 节点
+
+view_display.launch
+
+  单独打开 3d 图形化界面，使用前需要先打开 IMU 节点。
+
+view_rviz.launch
+
+  单独打开 rviz 可视化界面，使用前需要先打开 IMU 节点。
+```
+
+# 2021.09.26
+
+- 根据串口的 *KERNELS=="1-2.3"*关键字，映射串口名称
