添加调试日志内容

--- a/摸鱼日志.md
+++ b/摸鱼日志.md
@@ -17,3 +17,20 @@
   3、在Fiddler左侧的日志框中有一个 视频 的图标，鼠标右击，Copy--Just Url，获取视频的链接，将链接粘贴到浏览器中，即可下载
   
 ![Image](https://raw.githubusercontent.com/simoonp/picture/main/fiddler.png)
+
+
+- 2021.10.22
+
+Ubuntu终端监控系统
+
+```shell
+$ sudo htop
+# 参考链接 https://www.jianshu.com/p/3422ea8ad008
+```
+
+查看python已安装的所有包的版本
+
+```shell
+$ pip list
+```
+
