添加net.py 检测网络

--- a/调试日志.md
+++ b/调试日志.md
@@ -1504,6 +1504,7 @@ mkdir scripts
 cd scripts
 #wget https://raw.githubusercontent.com/simoonp/little-project/main/src/gps/control.py
 #wget https://raw.githubusercontent.com/simoonp/little-project/main/src/gps/mag.py
+wget https://raw.githubusercontent.com/simoonp/little-project/main/src/gps/net.py
 cp ~/tmp/control.py .
 cp ~/tmp/mag.py .
 chmod u+x *.py
@@ -1522,7 +1523,7 @@ sed -ri '/# target_link_libraries/ i\target_link_libraries(ctrl ${catkin_LIBRARI
 
 cd ~/gps_ws
 echo "重新编译"
-catkin_make
+catkin_make -DCMAKE_EXPORT_COMPILE_COMMANDS=YES
 
 sed -i '/gps_w/d' ~/.bashrc # 删除原来的source
 echo "source ~/gps_ws/devel/setup.bash" >> ~/.bashrc
@@ -1530,6 +1531,13 @@ echo "source ~/gps_ws/devel/setup.bash" >> ~/.bashrc
 echo "下载并编译gps包"
 cd ~/gps_ws/src
 git clone https://github.com/ncnynl/ublox
-cd ..
-catkin_make 
+cd ~/gps_ws/
+catkin_make -DCMAKE_EXPORT_COMPILE_COMMANDS=YES
+
+echo "修改gps端口"
+cd ~/gps_ws/src/ublox/ublox_gps/config
+sed -ri '/dev\/gps/ c\device: /dev/thegps' m8u_rover.yaml
+
+echo "开启北斗"
+sed -ri '/beidou/ c\  beidou: true' m8u_rover.yaml
 ```
