增加IMU相关的调试日志

--- a/调试日志.md
+++ b/调试日志.md
@@ -1541,3 +1541,27 @@ sed -ri '/dev\/gps/ c\device: /dev/thegps' m8u_rover.yaml
 echo "开启北斗"
 sed -ri '/beidou/ c\  beidou: true' m8u_rover.yaml
 ```
+
+# 2021.10.29
+
+阅读 imu_filter_madgwick 包的相关代码，添加部分中文注释，得出加速度与磁力融合的数学公式，在不同坐标系下，矩阵的数值不一样
+
+$$
+\vec{H}=\vec{Mag} |times \vec{Acc}  \\
+\vec{Acc}=Normalize(\vec{Acc})  \\
+\vec{Mag}=\vec{Acc} \times \vec{H}  \\
+NED:R=(Mag, H, -Acc)    \\
+NWU:R=(Mag, -H, Acc)    \\
+ENU:R=(H, Mag, Acc)
+$$
+
+修改该包在bringup_new.launch文件中的相关参数，开启两个mag标志位，将 world_frame 设置为 nwu(西北天坐标系)，保持和Hfi-a9陀螺仪的方向一致
+
+重新下载 handsfree_ros_imu 包的代码（代码有更新, 下载new分支的代码）
+```shell
+git clone -b new https://gitee.com/HANDS-FREE/handsfree_ros_imu.git
+```
+
+将 hfi_a9_ros.py 脚本中，imu和mag的话题分别修改为 /imu/data_raw 和 imu/mag，方便和 imu_filter_madgwick 对接
+
+修改后重新运行launch文件，数据精度有一些提高，待导航验证
