--- a/调试日志.md
+++ b/调试日志.md
@@ -1547,7 +1547,7 @@ sed -ri '/beidou/ c\  beidou: true' m8u_rover.yaml
 阅读 imu_filter_madgwick 包的相关代码，添加部分中文注释，得出加速度与磁力融合的数学公式，在不同坐标系下，矩阵的数值不一样
 
 $$
-\vec{H}=\vec{Mag} |times \vec{Acc}  \\
+\vec{H}=\vec{Mag} \times \vec{Acc}  \\
 \vec{Acc}=Normalize(\vec{Acc})  \\
 \vec{Mag}=\vec{Acc} \times \vec{H}  \\
 NED:R=(Mag, H, -Acc)    \\
