增加英语单词

--- a/文献阅读.md
+++ b/文献阅读.md
@@ -2,6 +2,10 @@
 
 ## ORB特征常用的特征匹配方法
 
-|名称|优点|缺点|
-|--|--|--|
-|暴力匹配(Brute Force BF)|||
+|名称|原理|优点|缺点|
+|--|--|--|--|
+|暴力匹配(Brute Force BF)|计算当前图像中待匹配特征点的描述子， 与另一幅图像中每一个特征点的描述子的距离， 然后对计算结果进行排序， 选取距离最近的特征点作为匹配成功的点|思路最简单|该算法会产生巨大的计算量， 影响视觉里程计的实时性，同时，暴力匹配将所有的特征点都加入匹配运算， 总可以选择一个最接近的匹配， 因此会产生较多的误匹配的情况|
+|K最近邻匹配(K-Nearest Neighbor KNN)|只选取与当前特征点最相似的Ｋ 个特征点进行匹配，如果Ｋ 个特征点的差别足够大， 则说明其中和当前特征点最相似的点是合格的匹配点。|在一定程度上可以减少误匹配的情况|.|
+|快速最近邻逼近搜索函数库(Fast Approximate Nearest Neighbor Search Library FLANN)|采用KD树来进行搜索操作，使用垂直于坐标轴的超平面不断划分空间， 最终划分成K维的超矩形区域， 存储在K维空间的特征点可以实现快速搜索|， 时间消耗明显比另外两种方法少， 特征匹配的准确性也更优秀|.|
+---
+
