增加英语单词

--- a/English/2021.11.04.md
+++ b/English/2021.11.04.md
@@ -1,1 +1,55 @@
 # 2021.11.04
+
+aviation
+
+asset
+
+attempt
+
+astronomy
+
+astonish
+
+attorney
+
+assimilate
+
+athlete
+
+assurance
+
+attendant
+
+assignment
+
+association
+
+assist
+
+atmosphere
+
+attendance
+
+assume
+
+attitude
+
+attribute
+
+audience
+
+attraction
+
+authenticate
+
+authentic
+
+authority
+
+authorize
+
+automatic
+
+avail
+
+avert
