md文件添加空行

--- a/English/c2021.11.04.md
+++ b/English/c2021.11.04.md
@@ -1,143 +1,708 @@
 aviation
+
 英 [eɪvɪ'eɪʃ(ə)n]  美 [,evɪ'eʃən]
+
 n. 航空；飞行术；飞机制造业
+
 CET6 TEM4  
+
+1. [32m[N-UNCOUNT]Aviation is the operation and production of aircraft. 航空; 飞机制造业
+
+[32m  例: [33m...the aviation industry.…航空工业。
+
+
+
 asset
+
 英 ['æset]  美 ['æsɛt]
+
 n. 资产；优点；有用的东西；有利条件；财产；有价值的人或物
+
 n. （法）阿塞（人名）
+
 CET4 TEM4  ( assets )
 
+
+
+1. [32m[N-COUNT]Something or someone that is an asset is considered useful or helps a person or organization to be successful. 资本
+
+[32m  例: [33mOur creativity in the field of technology is our greatest asset.我们在技术领域的创造力是我们最大的资本。
+
+
+
+2. [32m[商业]The assets of a company or a person are all the things that they own. 资产
+
+[32m  例: [33mBy the end of 1989 the group had assets of $3.5 billion.到1989年底该集团已有35亿美元的资产。
+
+
+
 attempt
+
 英 [ə'tem(p)t]  美 [ə'tɛmpt]
+
 n. 企图，试图；攻击
+
 vt. 企图，试图；尝试
+
 CET4 TEM4  ( attempting, attempted, attempts )
 
+
+
+1. [32m[V-T]If you attempt to do something, especially something difficult, you try to do it. 试图 (尤指做困难的事)
+
+[32m  例: [33mThe only time that we attempted to do something like that was in the city of Philadelphia.我们惟一一次试图做那样的事是在费城。
+
+
+
+2. [32m[N-COUNT]If you make an attempt to do something, you try to do it, often without success. (常指不成功的) 企图
+
+[32m  例: [33m...a deliberate attempt to destabilize the defence.…蓄意削弱防御的企图。
+
+
+
+3. [32m[N-COUNT]An attempt on someone's life is an attempt to kill them. (杀人) 企图
+
+[32m  例: [33m...an attempt on the life of the former Iranian prime minister.…刺杀伊朗前总理的企图。
+
+
+
 astronomy
+
 英 [ə'strɒnəmɪ]  美 [ə'strɑnəmi]
+
 n. 天文学
+
 CET6 TEM4  
+
 astonish
+
 英 [ə'stɒnɪʃ]  美 [ə'stɑnɪʃ]
+
 vt. 使惊讶
+
 CET4 TEM4  ( astonishing, astonished, astonishes )
 
+
+
+1. [32m[V-T]If something or someone astonishes you, they surprise you very much. 使十分惊讶
+
+[32m  例: [33mMy news will astonish you.我的消息会令你十分惊讶。
+
+
+
 attorney
+
 英 [ə'tɜːnɪ]  美 [ə'tɝni]
+
 n. 律师；代理人；检查官
+
 CET4 TEM4  ( attorneys )
 
+
+
+1. [32m[N-COUNT]In the United States, an attorney or attorney-at-law is a lawyer. 律师
+
+[32m  例: [33m...a prosecuting attorney.…一位公诉律师。
+
+[32m  例: [33mAt the hearing, her attorney did not enter a plea.在听证会上，她的律师没有提出申诉。
+
+
+
 assimilate
+
 英 [ə'sɪmɪleɪt]  美 [ə'sɪməlet]
+
 vt. 吸收；使同化；把…比作；使相似
+
 vi. 吸收；同化
+
 CET6 TEM8  ( assimilating, assimilated, assimilates )
 
+
+
+1. [32m[V-T/V-I]When people such as immigrants assimilate into a community or when that community assimilates them, they become an accepted part of it. 同化; 被同化
+
+[32m  例: [33mThere is every sign that new Asian-Americans are just as willing to assimilate.各种迹象表明新的亚裔美籍人简直一样愿意被同化。
+
+[32m  例: [33mHis family tried to assimilate into the white and Hispanic communities.他的家人努力融入到白人和拉美人社区。
+
+
+
+2. [32m[N-UNCOUNT]assimilation 同化
+
+[32m  例: [33mThey promote social integration and assimilation of minority ethnic groups into the culture.他们提倡少数民族团体与该文化的社会融合及同化。
+
+
+
+3. [32m[V-T]If you assimilate new ideas, customs, or techniques, you learn them or adopt them. 吸纳
+
+[32m  例: [33mMy mind could only assimilate one impossibility at a time.我的头脑一次只能吸纳一件不可能的事情。
+
+
+
+4. [32m[N-UNCOUNT]assimilation 吸纳
+
+[32m  例: [33mThis technique brings life to instruction and eases assimilation of knowledge.这种技术给教学带来活力，并使知识的吸收更加容易。
+
+
+
 athlete
+
 英 ['æθliːt]  美 ['æθlit]
+
 n. 运动员，体育家；身强力壮的人
+
 CET4 TEM4  ( athletes )
 
+
+
+1. [32m[N-COUNT]An athlete is a person who does any kind of physical sports, exercise, or games, especially in competitions. 运动员
+
+[32m  例: [33mMark Spitz was a great athlete.马克·斯皮茨是一名伟大的运动员。
+
+
+
+2. [32m[N-COUNT]You can refer to someone who is fit and athletic as an athlete. 运动型人
+
+[32m  例: [33mI was no athlete.我完全不是运动型的人。
+
+
+
 assurance
+
 英 [ə'ʃʊər(ə)ns]  美 [ə'ʃʊrəns]
+
 n. 保证，担保；（人寿）保险；确信；断言；厚脸皮，无耻
+
 CET6 TEM4  ( assurances )
 
+
+
+1. [32m[N-VAR]If you give someone an assurance that something is true or will happen, you say that it is definitely true or will definitely happen, in order to make them feel less worried. 保证
+
+[32m  例: [33mHe would like an assurance that other forces will not move into the territory that his forces vacate.他想要其他部队不会进入他的部队撤出的那个领地的一个保证。
+
+
+
+2. [32m[N-UNCOUNT]If you do something with assurance, you do it with a feeling of confidence and certainty. 信心
+
+[32m  例: [33mMasur led the orchestra with assurance.马苏尔很有信心地带领了那个管弦乐队。
+
+
+
 attendant
+
 英 [ə'tend(ə)nt]  美 [ə'tɛndənt]
+
 adj. 伴随的；侍候的
+
 n. 服务员，侍者；随员，陪从
+
 CET6 TEM4  ( attendants )
 
+
+
+1. [32m[N-COUNT]An attendant is someone whose job is to serve or help people in a place such as a petrol station or a car park. (加油站或停车场的) 服务员
+
+[32m  例: [33mTony Williams was working as a car park attendant in Los Angeles.托尼·威廉斯当时在洛杉矶的一个停车场做服务生。
+
+
+
+2. [32m[N-COUNT]The attendants at a wedding are people such as the bridesmaids and the ushers, who accompany or help the bride and groom. 婚礼随员 (如迎宾招待员、傧相)
+
+[32m  例: [33mIf the bride pays, she has the right to decide on the style of dress worn by her attendants.如果新娘付费，她有权决定她的婚礼随员穿什么款式。
+
+
+
 assignment
+
 英 [ə'saɪnm(ə)nt]  美 [ə'saɪnmənt]
+
 n. 分配；任务；作业；功课
+
 CET4 TEM4  ( assignments )
 
+
+
+1. [32m[N-COUNT]An assignment is a task or piece of work that you are given to do, especially as part of your job or studies. 任务; 作业
+
+[32m  例: [33mThe assessment for the course involves written assignments and practical tests.这门课程的评估包括各种书面作业和实践测试。
+
+
+
 association
+
 英 [əˌsəʊsɪˈeɪʃn]  美 [ə,soʃɪ'eʃən]
+
 n. 协会，联盟，社团；联合；联想
+
 CET4 TEM4  ( associations )
 
+
+
+1. [32m[N-COUNT]An association is an official group of people who have the same job, aim, or interest. 协会
+
+[32m  例: [33m...the National Basketball Association.…全国篮球协会。
+
+
+
+2. [32m[N-COUNT]Your association with a person or a thing such as an organization is the connection that you have with them. (与某人、某物的) 关联
+
+[32m  例: [33m...the company's six-year association with retailer J.C. Penney Co.…这家公司与零售商彭尼公司6年的业务往来。
+
+
+
+3. [32m[N-COUNT]If something has particular associations for you, it is connected in your mind with a particular memory, idea, or feeling. (与某记忆、观念、情感的) 关联
+
+[32m  例: [33mHe has a shelf full of things, each of which has associations for him.他有一个摆满了东西的架子，每一样都与他的内心世界有关联。
+
+
+
+4. [32m[PHRASE]If you do something in association with someone else, you do it together. 与…联合
+
+[32m  例: [33mThe changes I instigated in association with the board 18 months ago were because I love this company.18个月前我联合董事会发起的这些变革是出于我爱这家公司。
+
+
+
 assist
+
 英 [ə'sɪst]  美 [ə'sɪst]
+
 n. 帮助；助攻
+
 vi. 参加；出席
+
 vt. 帮助；促进
+
 CET4 TEM4  ( assisting, assisted, assists )
 
+
+
+1. [32m[V-T]If you assist someone, you help them to do a job or task by doing part of the work for them. (通过分担一部分工作以) 帮助
+
+[32m  例: [33mThe family decided to assist me with my chores.家人决定分担我的琐事。
+
+
+
+2. [32m[V-T/V-I]If you assist someone, you give them information, advice, or money. (提供信息、建议、资金等以) 协助
+
+[32m  例: [33mThe public is urgently requested to assist police in tracing this man.公众被紧急要求协助警方追踪这名男子。
+
+[32m  例: [33mInternational organizations intensified their activities to locate victims and assist with relief efforts.各国际组织加强了他们的活动以寻找受害者并协助救援工作。
+
+
+
+3. [32m[V-T/V-I]If something assists in doing a task, it makes the task easier to do. (在做某任务中) 有助益
+
+[32m  例: [33m...a chemical that assists in the manufacture of proteins.…一种有助于蛋白质的制造的化学物。
+
+[32m  例: [33mOur sales representatives can assist you in selecting suitable investments.我们的销售代表在选择合适的投资方面能帮到您。
+
+
+
 atmosphere
+
 英 ['ætməsfɪə]  美 ['ætməsfɪr]
+
 n. 气氛；大气；空气
+
 CET4 TEM4  ( atmospheres )
 
+
+
+1. [32m[N-COUNT]A planet's atmosphere is the layer of air or other gases around it. (行星的) 大气层
+
+[32m  例: [33mThe shuttle Columbia will re-enter Earth's atmosphere tomorrow morning.哥伦比亚号航天飞机将在明天上午重进地球大气层。
+
+
+
+2. [32m[N-COUNT]The atmosphere of a place is the air that you breathe there. (某地的) 空气
+
+[32m  例: [33mThese gases pollute the atmosphere of towns and cities.这些气体污染城镇的空气。
+
+
+
+3. [32m[N-SING]The atmosphere of a place is the general impression that you get of it. 气氛
+
+[32m  例: [33mThere's still an atmosphere of great hostility and tension in the city.在这座城市里依然有一种极其敌对和紧张的气氛。
+
+
+
+4. [32m[N-UNCOUNT]If a place or an event has atmosphere, it is interesting. 神韵
+
+[32m  例: [33mThe old harbour is still full of atmosphere and well worth visiting.旧港口依然充满神韵，很值得参观。
+
+
+
 attendance
+
 英 [ə'tend(ə)ns]  美 [ə'tɛndəns]
+
 n. 出席；到场；出席人数；考勤
+
 CET4 TEM4  ( attendances )
 
+
+
+1. [32m[N-UNCOUNT]Someone's attendance at an event or an institution is the fact that they are present at the event or go regularly to the institution. 出勤; 出席
+
+[32m  例: [33mHer attendance in school was sporadic.她在学校的出勤率很低。
+
+
+
+2. [32m[N-VAR]The attendance at an event is the number of people who are present at it. 出席人数
+
+[32m  例: [33mRain played a big part in the air show's drop in attendance.下雨是这次飞行表演观众数量下降的主要原因。
+
+
+
 assume
+
 英 [ə'sjuːm]  美 [ə'sum]
+
 vi. 假定；设想；承担；采取
+
 vt. 僭取；篡夺；夺取；擅用；侵占
+
 CET4 TEM4  ( assuming, assumed, assumes )
 
+
+
+1. [32m[V-T]If you assume that something is true, you imagine that it is true, sometimes wrongly. 假设
+
+[32m  例: [33mIt is a misconception to assume that the two continents are similar.假设这两块大陆类似是种错误概念。
+
+[32m  例: [33mIf mistakes occurred, they were assumed to be the fault of the commander on the spot.如果出现了错误，它们就被以为是现场指挥官的错。
+
+
+
+2. [32m[V-T]If someone assumes power or responsibility, they take power or responsibility. 接受 (权利、责任)
+
+[32m  例: [33mMr. Cross will assume the role of CEO with a team of four directors.克罗斯先生将担任由４位执行官组成的一个团队的首席执行官一职。
+
+
+
+3. [32m[V-T]If you assume a particular expression or way of behaving, you start to look or behave in this way. 做出 (某表情); 采取 (某行为方式)
+
+[32m  例: [33mHe managed to assume an air of calm.他设法表现出一幅平静的样子。
+
+
+
 attitude
+
 英 ['ætɪtjuːd]  美 ['ætɪtʊd]
+
 n. 态度；看法；意见；姿势
+
 CET4 TEM4  ( attitudes )
 
+
+
+1. [32m[N-VAR]Your attitude to something is the way that you think and feel about it, especially when this shows in the way you behave. 态度
+
+[32m  例: [33m...the general change in attitude toward handicapped people.…对残疾人态度的普遍转变。
+
+[32m  例: [33mBeing unemployed produces negative attitudes to work.失业会对工作产生消极态度。
+
+
+
 attribute
+
 英 [ə'trɪbjuːt]  美 [ə'trɪbjut]
+
 n. 属性；特质
+
 vt. 归属；把…归于
+
 CET4  ( attributing, attributed, attributes )
 
+
+
+1. [32m[V-T]If you attribute something to an event or situation, you think that it was caused by that event or situation. 把…归因于
+
+[32m  例: [33mWomen tend to attribute their success to external causes such as luck.女性往往把她们的成功归因于外因，如运气。
+
+
+
+2. [32m[V-T]If you attribute a particular quality or feature to someone or something, you think that they have it. 赋予 (某品质或特点)
+
+[32m  例: [33mPeople were beginning to attribute superhuman qualities to him.人们开始赋予他超人的品质。
+
+
+
+3. [32m[usu passive]If a piece of writing, a work of art, or a remark is attributed to someone, people say that they wrote it, created it, or said it. 认为 (文章、作品等) 出自…
+
+[32m  例: [33mThis, and the remaining frescoes, are not attributed to Giotto.这个，还有那些残存的壁画，被认为不是乔托的作品。
+
+
+
+4. [32m[N-COUNT]An attribute is a quality or feature that someone or something has. 特性
+
+[32m  例: [33mCruelty is a normal attribute of human behaviour.残忍是人类行为的一种正常的特性。
+
+
+
 audience
+
 英 ['ɔːdɪəns]  美 ['ɔdɪəns]
+
 n. 观众；听众；读者；接见；正式会见；拜会
+
 CET4 TEM4  ( audiences )
 
+
+
+1. [32m[N-COUNT-COLL]The audience at a play, concert, film, or public meeting is the group of people watching or listening to it. 观众
+
+[32m  例: [33mThe entire audience broke into loud applause.全场观众爆发出响亮的掌声。
+
+
+
+2. [32m[N-COUNT-COLL]The audience for a television or radio programme consists of all the people who watch or listen to it. 观众; 听众
+
+[32m  例: [33mThe concert will be broadcast to a worldwide television audience estimated at one billion.这场音乐会将向全世界大约十亿电视观众转播。
+
+
+
+3. [32m[N-COUNT-COLL]The audience of a writer or artist is the people who read their books or look at their work. 读者; 欣赏者
+
+[32m  例: [33mSay's writings reached a wide audience during his lifetime.塞伊的作品在他有生之年就拥有了广泛读者。
+
+
+
 attraction
+
 英 [ə'trækʃ(ə)n]  美 [ə'trækʃən]
+
 n. 吸引，吸引力；引力；吸引人的事物
+
 CET4 TEM4  ( attractions )
 
+
+
+1. [32m[N-UNCOUNT]Attraction is a feeling of liking someone, and often of being sexually interested in them. 吸引 (常指异性)
+
+[32m  例: [33mOur level of attraction to the opposite sex has more to do with our inner confidence than how we look.我们对异性的吸引程度更多地与我们内心的自信有关，而不是外貌。
+
+
+
+2. [32m[N-COUNT]An attraction is a feature that makes something interesting or desirable. 吸引力
+
+[32m  例: [33m...the attractions of living on the waterfront.…滨水生活的吸引力。
+
+
+
+3. [32m[N-COUNT]An attraction is something that people can go to for interest or enjoyment, for example, a famous building. 游览胜地
+
+[32m  例: [33mThe walled city is an important tourist attraction.这座城墙围绕的城市是一个重要的旅游胜地。
+
+
+
 authenticate
+
 英 [ɔː'θentɪkeɪt]  美 [ɔ'θɛntɪket]
+
 vt. 鉴定；证明…是真实的
+
 ( authenticating, authenticated, authenticates )
 
+
+
+1. [32m[V-T]If you authenticate something, you state officially that it is genuine after examining it. 鉴定
+
+[32m  例: [33mHe says he'll have no problem authenticating the stamp.他说他完全可以鉴定这枚邮票。
+
+
+
 authentic
+
 英 [ɔː'θentɪk]  美 [ɔ'θɛntɪk]
+
 adj. 真正的，真实的；可信的
+
 CET4 TEM4  
+
+1. [32m[ADJ]An authentic person, object, or emotion is genuine. 真实的
+
+[32m  例: [33m...authentic Italian food.…正宗的意大利食品。
+
+[32m  例: [33mShe has authentic charm whereas most people simply have nice manners.她有真正的魅力，而大多数人只是有礼貌而已。
+
+
+
+2. [32m[N-UNCOUNT]authenticity 真实性
+
+[32m  例: [33mThere are factors, however, that have cast doubt on the statue's authenticity.然而，有些因素已经让人们对这座雕像的真实性产生了怀疑。
+
+
+
+3. [32m[表赞许]If you describe something as authentic, you mean that it is such a good imitation that it is almost the same as or as good as the original. 逼真的
+
+[32m  例: [33m...patterns for making authentic frontier-style clothing.…制作地道的边疆风格服装的图样。
+
+
+
+4. [32m[ADJ]An authentic piece of information or account of something is reliable and accurate. 可靠的
+
+[32m  例: [33mI had obtained the authentic details about the birth of the organization.我已经弄到了有关该组织成立的可靠的详细资料。
+
+
+
 authority
+
 英 [ɔː'θɒrɪtɪ]  美 [ə'θɔrəti]
+
 n. 权威；权力；当局
+
 CET4 TEM4  ( authorities )
 
+
+
+1. [32m[N-PLURAL]Theauthorities are the people who have the power to make decisions and to make sure that laws are obeyed. 当局
+
+[32m  例: [33mThis provided a pretext for the authorities to cancel the elections.这给当局提供了一个取消选举的借口。
+
+
+
+2. [32m[N-COUNT]An authority is an official organization or government department that has the power to make decisions. 官方机构
+
+[32m  例: [33m...the Philadelphia Parking Authority.…费城停车管理局。
+
+
+
+3. [32m[N-COUNT]Someone who is an authority on a particular subject knows a lot about it. (某一学科的) 权威人士
+
+[32m  例: [33mHe's universally recognized as an authority on Russian affairs.他被公认为是俄罗斯事务的权威。
+
+
+
+4. [32m[N-UNCOUNT]Authority is the right to command and control other people. 职权
+
+[32m  例: [33mA family member in a family business has a position of authority and power.家庭成员在家族企业中都有职有权。
+
+
+
+5. [32m[N-UNCOUNT]If someone has authority, they have a quality which makes other people take notice of what they say. 威信
+
+[32m  例: [33mHe had no natural authority and no capacity for imposing his will on others.他天生没有威信，也没有将其意志强加于他人的能力。
+
+
+
+6. [32m[N-UNCOUNT]Authority is official permission to do something. 官方的许可
+
+[32m  例: [33mThe prison governor has refused to let him go, saying he must first be given authority from his own superiors.监狱长已拒绝释放他，说他必须首先得到上级的许可。
+
+
+
 authorize
+
 英/美 ['ɔθəraɪz]
+
 vt. 批准，认可；授权给；委托代替
+
 CET6 TEM4  ( authorizing, authorized, authorizes )
 
+
+
+1. [32m[V-T]If someone in a position of authority authorizes something, they give their official permission for it to happen. 批准
+
+[32m  例: [33mIt would certainly be within his power to authorize a police raid like that.他肯定有权批准那种警方突袭行动。
+
+
+
+2. [32m[N-VAR]authorization 批准
+
+[32m  例: [33mThe United Nations will approve his request for authorization to use military force to deliver aid.联合国将同意他的请求，批准他动用军队来运送救援物资。
+
+
+
 automatic
+
 英 [ɔːtə'mætɪk]  美 ['ɔtə'mætɪk]
+
 adj. 自动的；无意识的；必然的
+
 n. 自动机械；自动手枪
+
 CET4 TEM4  ( automatics )
 
+
+
+1. [32m[ADJ]An automatic machine or device is one that has controls that enable it to perform a task without needing to be constantly operated by a person. Automatic methods and processes involve the use of such machines. (机器或装置) 自动的
+
+[32m  例: [33mModern trains have automatic doors.现代火车都有自动门。
+
+
+
+2. [32m[ADJ n]An automatic weapon is one that keeps firing shots until you stop pulling the trigger. (武器) 自动的
+
+[32m  例: [33mThree gunmen with automatic rifles opened fire.3名手持自动步枪的歹徒开了火。
+
+
+
+3. [32m[N-COUNT]Automatic is also a noun. 自动枪
+
+[32m  例: [33mHe drew his automatic and began running in the direction of the sounds.他拔出自动枪，朝发出声音的方向跑去。
+
+
+
+4. [32m[ADJ]An automatic action is one that you do without thinking about it. (行动) 无意识的
+
+[32m  例: [33mAll of the automatic body functions, even breathing, are affected.所有无意识的身体功能，甚至呼吸，都受到影响。
+
+
+
+5. [32m[ADV]automatically 无意识地
+
+[32m  例: [33mYou will automatically wake up after this length of time.你将在这段时间之后自然醒来。
+
+
+
 avail
+
 英 [ə'veɪl]  美 [ə'vel]
+
 n. 效用，利益
+
 vt. 有益于，有益于；使对某人有利。
+
 vi. 有益于，有益于；使对某人有利。
+
 CET6 TEM8  ( availing, availed, avails )
 
+
+
+1. [32m[书面]If you do something to no avail or to little avail, what you do fails to achieve what you want. 徒劳
+
+[32m  例: [33mHis efforts were to no avail.他的努力是徒劳的。
+
+
+
+2. [32m[正式]If you avail yourself of an offer or an opportunity, you accept the offer or make use of the opportunity. 利用
+
+[32m  例: [33mGuests should feel at liberty to avail themselves of your facilities.客人们应可以随意使用你们的设施。
+
+
+
 avert
+
 英 [ə'vɜːt]  美 [ə'vɝt]
+
 vt. 避免，防止；转移
+
 CET6 TEM8  ( averting, averted, averts )
+
+
+
+1. [32m[V-T]If you avert something unpleasant, you prevent it from happening. 防止
+
+[32m  例: [33mTalks with the teachers' union over the weekend have averted a strike.周末与教师工会的会谈避免了一次罢工。
+
+
+
+2. [32m[V-T]If you avert your eyes or gaze from someone or something, you look away from them. 转移 (视线)
+
+[32m  例: [33mHe avoids any eye contact, quickly averting his gaze when anyone approaches.他避免任何目光接触，任何人接近他时，他都会迅速转移视线。
+
+
 
